--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "chromedriver": "^85.0.0",
+    "chromedriver": "^85.0.1",
     "geckodriver": "^1.19.1",
     "mocha": "^8.0.1",
+    "npm": "^6.14.8",
     "selenium-webdriver": "^4.0.0-alpha.7"
   }
 }
