--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
-    "test": "node_modules/.bin/mocha ./e2e/test.js --timeout 20000"
+    "test": "node_modules/.bin/mocha ./e2e/test.js --timeout 20000",
+    "lint": "cross-env ./node_modules/.bin/mocha ./e2e/test.js --timeout 20000"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "chromedriver": "^85.0.1",
+    "chromedriver": "^108.0.0",
+    "cross-env": "^7.0.3",
     "geckodriver": "^1.19.1",
     "mocha": "^8.0.1",
     "npm": "^6.14.8",
